--- a/OpenGLHooking/OpenGLHooking.vcxproj
+++ b/OpenGLHooking/OpenGLHooking.vcxproj
@@ -154,11 +154,13 @@
   <ItemGroup>
     <ClInclude Include="Hook.h" />
     <ClInclude Include="mem.h" />
+    <ClInclude Include="opengl_draw.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="Hook.cpp" />
     <ClCompile Include="mem.cpp" />
+    <ClCompile Include="opengl_draw.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
