--- a/OpenGLHooking/OpenGLHooking.vcxproj.filters
+++ b/OpenGLHooking/OpenGLHooking.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="mem.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="opengl_draw.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -30,6 +33,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="mem.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="opengl_draw.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
