--- a/D3D9Hook/D3D9Hook.vcxproj.filters
+++ b/D3D9Hook/D3D9Hook.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="Utils.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="csgo.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
