--- a/D3D9Hook/D3D9Hook.vcxproj
+++ b/D3D9Hook/D3D9Hook.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="csgo.hpp" />
     <ClInclude Include="D3dHook.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Esp.h" />
